--- a/src/index.css
+++ b/src/index.css
@@ -13,19 +13,30 @@ code {
     monospace;
 }
 
+p {
+    font-family: "Helvetica Neue";
+}
+
+#title {
+    color: white;
+    font-weight: bold;
+}
+
 .guessChar {
     display: inline-block;
-    background-color: #3a3a3c;
-    font-family: "Helvetica Neue";
-    font-size: 25px;
-    font-weight: bold;
+
     width: 50px;
     height: 50px;
     line-height:50px;
+    vertical-align: top;
     margin: 3px;
+
+    background-color: #3a3a3c;
     text-align: center;
     text-transform: capitalize;
     color: white;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .guessChar.eat {
@@ -44,11 +55,11 @@ code {
 }
 
 #input {
-    background-color: #3a3a3c;
     width: 255px;
     height: 50px;
     padding-left: 17px;
-    letter-spacing: 38.5px;
+    letter-spacing: 10px;
+    background-color: #3a3a3c;
 
     border-width: 0px;
     font-family: "Helvetica Neue";
