--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+
+
+#root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#game {
+    display: flex;
+    flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    width: 305px;
+    height: 50px;
+    font-size: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header span {
+    flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+#title {
+    color: white;
+    font-weight: bold;
+    vertical-align: middle;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#menu {
+    color: gray;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 25px;
+}
+
+#guessRow {
+    display: flex;
+    flex-direction: row;
+}
+
+.guessChar {
+
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    vertical-align: top;
+    margin: 3px;
+
+    background-color: #3a3a3c;
+    text-align: center;
+    text-transform: capitalize;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.guessChar.eat {
+    background-color: #538d4e;
+}
+.guessChar.bite {
+    background-color: #b59f3b;
+}
+
+#form {
+    margin: 3px
+}
+
+#input {
+    width: 305px;
+    height: 60px;
+    padding-left: 17px;
+    letter-spacing: 10px;
+    background-color: #3a3a3c;
+
+    border-width: 0px;
+    font-family: "Helvetica Neue";
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+
+    overflow-wrap: normal;
 }
